improved findBooksByAuthors
